# aoc2022

./: .gitignore  Cargo.toml  GetInput.sh  NewDay.sh  Run.sh  RunRel.sh  Test.sh
aoc/: Cargo.toml
aoc/src/: gif.rs  lib.rs
aocinput/: Cargo.toml
aocinput/src/: lib.rs
day01/: Cargo.toml
day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
day04/src/: main.rs
day05/src/: main.rs
day06/src/: main.rs
day07/src/: main.rs
day08/src/: main.rs
day09/src/: main.rs
day10/src/: cpu.rs  main.rs
day11/src/: main.rs  part1.rs  part2.rs
day12/: Cargo.toml
day12/src/: main.rs  vis.rs
day12/src/lib/: palette.rs  pos.rs
day12/src/map/: mod.rs  palette.rs  workitem.rs
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: lib.rs  main.rs  map.rs  vis.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: floydwarshall.rs  main.rs  route.rs  walk.rs  xref.rs
day17/: Cargo.toml
day17/src/: main.rs  piece.rs
day18/src/: cube.rs  face.rs  main.rs
day19/: Cargo.toml
day19/src/: main.rs  simulate.rs
day20/src/: main.rs
day21/src/: main.rs
day22/src/: main.rs  map.rs  part1.rs  (+1 more)
day23/: Cargo.toml
day23/src/: dir.rs  elf.rs  elves.rs  input.rs  lib.rs  main.rs  vis.rs
day24/: Cargo.toml
day24/src/: dir.rs  input.rs  lib.rs  main.rs  map.rs  pos.rs  shortest_path.rs  vis.rs
day25/: Cargo.toml
stats/: day01-linux.txt  day01-macos.txt  day01.txt  day02-linux.txt  day02-macos.txt  day02.txt  day03-linux.txt  day03-macos.txt  day03.txt  day04-linux.txt  day04-macos.txt  day04.txt  day05-linux.txt  day05-macos.txt  day05.txt  day06-linux.txt  day06-macos.txt  day06.txt  day07-linux.txt  day07-macos.txt  day07.txt  day08-linux.txt  day08-macos.txt  day08.txt  day09-linux.txt  day09-macos.txt  day09.txt  day10-linux.txt  day10-macos.txt  day10.txt  day11-linux.txt  day11-macos.txt  day11.txt  day12-linux.txt  day12-macos.txt  day12.txt  day12vis-linux.txt  day12vis-macos.txt  day13-linux.txt  day13-macos.txt  (+36 more)
template/: Cargo.toml
(+4 files in other folders)
