[workspace.package]
edition = "2021"
authors = ["Andrew Ward (andy.ward.uk@gmail.com)"]

[workspace]

members = [
    "aoc",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
]

[profile.release]
debug = true
lto = true
