[package]
name = "day12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
gif = "0.12.0"
lazy_static = "1.4.0"

[[bin]]
name = "day12"
path = "src/main.rs"

[[bin]]
name = "day12vis"
path = "src/vis.rs"

[lib]
name = "day12lib"
path = "src/lib/lib.rs"
