[package]
name = "day14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
prng_mt = "0.1.0"
lazy_static = "1.4.0"

[lib]
name = "day14lib"
path = "src/lib.rs"

[[bin]]
name = "day14"
path = "src/main.rs"

[[bin]]
name = "day14vis"
path = "src/vis.rs"
