[package]
name = "day23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
hsl = "0.1.1"
lazy_static = "1.4.0"

[lib]
name = "day23lib"
path = "src/lib.rs"

[[bin]]
name = "day23"
path = "src/main.rs"

[[bin]]
name = "day23vis"
path = "src/vis.rs"
