[package]
name = "day24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
lazy_static = "1.4.0"

[[bin]]
name = "day24"
path = "src/main.rs"

[[bin]]
name = "day24vis"
path = "src/vis.rs"

[lib]
name = "day24lib"
path = "src/lib.rs"
